--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build and SAST
 
 on:
   pull_request:
@@ -7,19 +7,47 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container:
-      image: maven:3.9-eclipse-temurin-21
+    name: Build with Maven
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn -B clean package
 
       - name: Upload JAR artifacts
         uses: actions/upload-artifact@v4
         with:
           name: jar-artifacts
-          path: ./target/*.jar
+          path: target/*.jar
+
+  sast:
+    name: Semgrep SAST
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Semgrep scan
+        uses: returntocorp/semgrep-action@v1
+        with:
+          config: auto
+          generateSarif: "true"
+          sarifFile: semgrep.sarif
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload SARIF to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: semgrep.sarif
