--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,52 +2,55 @@ name: Build and SAST
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
-    name: Build with Maven
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    container:
+      image: maven:3.9.6-eclipse-temurin-21
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '21'
+      - name: Set up Maven
+        run: |
+          if [ -f "mvnw" ]; then
+            chmod +x mvnw
+          fi
 
       - name: Build with Maven
-        run: mvn -B clean package
+        run: |
+          if [ -f "mvnw" ]; then
+            ./mvnw clean compile test package
+          else
+            mvn clean compile test package
+          fi
 
-      - name: Upload JAR artifacts
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: jar-artifacts
-          path: target/*.jar
+          name: java-app
+          path: ./target/*.jar
 
   sast:
-    name: Semgrep SAST
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
+    container:
+      image: returntocorp/semgrep:latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Semgrep scan
-        uses: returntocorp/semgrep-action@v1
-        with:
-          config: auto
-          generateSarif: "true"
-          sarifFile: .semgrep/semgrep.sarif
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Semgrep SAST scan
+        run: |
+          echo "Running Semgrep SAST scan..."
+          semgrep scan --config auto --sarif --output=semgrep-results.sarif .
 
-      - name: Upload SARIF to GitHub Security tab
+      - name: Upload SARIF report
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: .semgrep/semgrep.sarif
+          sarif_file: semgrep-results.sarif
+          category: semgrep
