--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and SAST
+name: SCA Analysis Working
 
 on:
   pull_request:
@@ -8,49 +8,63 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: maven:3.9.6-eclipse-temurin-21
+      image: maven:3.9.8-eclipse-temurin-21
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Maven
-        run: |
-          if [ -f "mvnw" ]; then
-            chmod +x mvnw
-          fi
 
       - name: Build with Maven
-        run: |
-          if [ -f "mvnw" ]; then
-            ./mvnw clean compile test package
-          else
-            mvn clean compile test package
-          fi
+        run: mvn -B clean test package
 
-      - name: Upload build artifact
+      - name: Upload JAR artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
+          name: app-jars
           path: ./target/*.jar
 
-  sast:
+  semgrep-sast:
+    needs: build
     runs-on: ubuntu-latest
-    needs: [build]
-    container:
-      image: returntocorp/semgrep:latest
+    permissions:
+      contents: read
+      security-events: write
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run Semgrep SAST scan
-        run: |
-          echo "Running Semgrep SAST scan..."
-          semgrep scan --config auto --sarif --output=semgrep-results.sarif .
+      - name: Install Semgrep
+        run: pip install semgrep
 
-      - name: Upload SARIF report
+      - name: Run Semgrep SAST
+        run: semgrep ci --config auto --sarif -o semgrep-report.sarif
+
+      - name: Upload SARIF to GitHub Security
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: semgrep-results.sarif
-          category: semgrep
+          sarif_file: semgrep-report.sarif
+
+  sca-dependency-check:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21 with Maven
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+          cache: maven
+
+      - name: Run OWASP Dependency-Check (SCA)
+        run: mvn -B org.owasp:dependency-check-maven:aggregate
+
+      - name: Upload SCA HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: target/dependency-check-report.html
