--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -1,16 +1,21 @@
-name: secret-scan
+name: Secret Scan
 
 on:
   push:
+    branches: [ main, master, feature/scan ]
   pull_request:
 
 jobs:
-  gitleaks:
+  secret-scan:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Run Gitleaks
-        uses: docker://zricethezav/gitleaks:latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          args: detect --source . --no-git --verbose --exit-code 1
+          fetch-depth: 0
+
+      - name: Scan for secrets with Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
